add gas oracle to all evm chains
