# node/coinstacks/polygon/api/src/swagger.json
@@ -329,16 +329,19 @@
 						"type": "string"
 					}
 				},
+				"required": [
+					"gasPrice"
+				],
 				"type": "object",
 				"additionalProperties": false
 			},
 			"GasFees": {
-				"description": "Contains info about current recommended fees to use in a transaction",
+				"description": "Contains info about current recommended fees to use in a transaction.\nEstimates for slow, average and fast confirmation speeds provided as well.",
 				"properties": {
 					"gasPrice": {
 						"type": "string"
 					},
-					"maxFeePerGas": {
+					"baseFeePerGas": {
 						"type": "string"
 					},
 					"maxPriorityFeePerGas": {
@@ -823,25 +826,6 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/GasFees"
-								},
-								"examples": {
-									"Example 1": {
-										"value": {
-											"gasPrice": "250000000000",
-											"slow": {
-												"maxFeePerGas": "250000000000",
-												"maxPriorityFeePerGas": "10000000000"
-											},
-											"average": {
-												"maxFeePerGas": "350000000000",
-												"maxPriorityFeePerGas": "150000000000"
-											},
-											"fast": {
-												"maxFeePerGas": "450000000000",
-												"maxPriorityFeePerGas": "250000000000"
-											}
-										}
-									}
 								}
 							}
 						}
